// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`isset assign 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "operator": "=",
        "right": Isset {
          "kind": "isset",
          "variables": Array [
            Variable {
              "curly": false,
              "kind": "variable",
              "name": "var",
            },
          ],
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`isset multiple 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Isset {
        "kind": "isset",
        "variables": Array [
          Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
          Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
          Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
        ],
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`isset simple 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Isset {
        "kind": "isset",
        "variables": Array [
          Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
        ],
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`isset trailing comma #2 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Isset {
        "kind": "isset",
        "variables": Array [
          Variable {
            "curly": false,
            "kind": "variable",
            "name": "foo",
          },
          Variable {
            "curly": false,
            "kind": "variable",
            "name": "bar",
          },
        ],
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`isset trailing comma 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Isset {
        "kind": "isset",
        "variables": Array [
          Variable {
            "curly": false,
            "kind": "variable",
            "name": "foo",
          },
        ],
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
